# pytest-optional-dependencies

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/: .deployment.md
.github/workflows/: main.yml  publish-to-pypi.yml
examples/: README.md  pyproject.toml  test_bad_dependency.py  test_optional_dependency.py
src/pytest_optional_dependencies/: __init__.py  plugin.py
tests/: test_helpers.py  test_missing_imports.py
